--- a/overlay/index.html
+++ b/overlay/index.html
@@ -38,7 +38,9 @@ Raven && Raven.config('https://77d763feffdf45daa9a75517878489cd@s.hibiya.moe/2',
 
     </script>
     <script src="../share/lib/util.js?v=additional-memory"></script>
+    <script src="../share/lib/util.js?v=dreamy-percentiles"></script>
     <script src="../share/lib/config.js?v=additional-memory"></script>
+    <script src="../share/lib/config.js?v=dreamy-percentiles"></script>
     <script>
 'use strict'
 
@@ -46,10 +48,15 @@ Raven && Raven.setRelease(VERSION)
 
     </script>
     <script src="../share/lib/ws-abstract.js?v=additional-memory"></script>
+    <script src="../share/lib/ws-abstract.js?v=dreamy-percentiles"></script>
     <script src="../share/lib/locale.js?v=additional-memory"></script>
+    <script src="../share/lib/locale.js?v=dreamy-percentiles"></script>
     <script src="lib/render.js?v=additional-memory"></script>
+    <script src="lib/render.js?v=dreamy-percentiles"></script>
     <script src="lib/listen.js?v=additional-memory"></script>
+    <script src="lib/listen.js?v=dreamy-percentiles"></script>
     <script src="lib/ui.js?v=additional-memory"></script>
+    <script src="lib/ui.js?v=dreamy-percentiles"></script>
     <script>
 'use strict'
 
